# FreshMallDemo

./: .gitignore  .qiniu_pythonsdk_hostscache.json  demo.sql  mydatabase  pyproject.toml  requirements.txt
apps/cart/: apps.py  urls.py  views.py
apps/goods/: admin.py  apps.py  urls.py  views.py
apps/goods/migrations/: 0001_initial.py
apps/orders/: models.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_initial.py
apps/users/: models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
celery_tasks/: celery.py  tasks.py
dailyfresh/: settings.py  urls.py
static/: index.html
templates/: base.html  cart.html  index.html  login.html  place_order.html  register.html  static_base.html  user_center_base.html  user_center_info.html  user_center_order.html  user_center_site.html
utils/: models.py  qiniu.py  storage.py  views.py
utils/fastdfs/: client.conf  storage.py
