[tool.poetry]
name = "freshmalldemo"
version = "0.1.0"
description = ""
authors = ["Leslie Chan <leslie_chan@wochacha.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.5"
django-redis = "^5.2.0"
django-redis-sessions = "^0.6.2"
itsdangerous = "^2.1.2"
jieba = "^0.42.1"
pillow = "^9.4.0"
pymysql = "^1.0.2"
python-alipay-sdk = "^3.1.0"
celery = "^5.2.7"
django-tinymce = "^3.5.0"
fdfs-client-py3 = "^1.0.0"
qiniu = "^7.9.0"
django-environ = "^0.9.0"
django-storages = "^1.13.2"
boto3 = "^1.26.61"
collectfast = "^2.2.0"
cryptography = "39.0.1"
authlib = "^1.2.0"
django-oauth-toolkit = "^2.2.0"
psycopg2-binary = "^2.9.5"
django-simpleui = "^2023.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
